package org.source.utility.assign;

import com.alibaba.ttl.threadpool.TtlExecutors;
import com.fasterxml.jackson.annotation.JsonBackReference;
import com.fasterxml.jackson.annotation.JsonIncludeProperties;
import com.fasterxml.jackson.annotation.JsonManagedReference;
import com.fasterxml.jackson.annotation.JsonPropertyOrder;
import lombok.Getter;
import lombok.extern.slf4j.Slf4j;
import org.apache.commons.collections4.CollectionUtils;
import org.apache.commons.lang3.ObjectUtils;
import org.apache.commons.lang3.StringUtils;
import org.apache.commons.lang3.concurrent.BasicThreadFactory;
import org.jspecify.annotations.Nullable;
import org.source.utility.constant.Constants;
import org.source.utility.enums.BaseExceptionEnum;
import org.source.utility.utils.Jsons;
import org.source.utility.utils.Streams;
import org.source.utility.utils.Timing;
import org.source.utility.utils.Timings;

import java.util.*;
import java.util.concurrent.*;
import java.util.concurrent.atomic.AtomicInteger;
import java.util.function.*;
import java.util.stream.Stream;

@Slf4j
@JsonIncludeProperties({"name", "depth", "interruptStrategy", "executor", "timeout", "invokeTiming", "acquires", "branches", "dependOnAssigns", "dependByAssign"})
@JsonPropertyOrder({"name", "depth", "interruptStrategy", "executor", "timeout", "invokeTiming", "acquires", "branches", "dependOnAssigns", "dependByAssign"})
public class Assign<E> {
    private static final int ROOT_DEPTH = 1;
    private static final int PROCESSORS = Runtime.getRuntime().availableProcessors();
    /**
     * jdk21，改用虚拟线程
     */
    public static final int SEMAPHORE_PERMITS_DEFAULT = PROCESSORS * 100;
    private static final ExecutorService DEFAULT_EXECUTOR_VIRTUAL = Objects.requireNonNull(
            TtlExecutors.getTtlExecutorService(Executors.newVirtualThreadPerTaskExecutor()));

    private static final ExecutorService DEFAULT_EXECUTOR = Objects.requireNonNull(TtlExecutors.getTtlExecutorService(
            new ThreadPoolExecutor(1, PROCESSORS * 10, 60, TimeUnit.SECONDS, new SynchronousQueue<>(),
                    new BasicThreadFactory.Builder().namingPattern("assign-pool-%d").build(), new ThreadPoolExecutor.CallerRunsPolicy())
    ));
    /**
     * 集合不可修改，只可以更新集合对象的值
     */
    private final Collection<E> mainData;
    @Getter
    private final int depth;
    @JsonManagedReference
    @Getter
    private final List<Acquire<E, ?, ?>> acquires;
    private final List<Consumer<E>> assignValues;
    /**
     * 分支：分支和主体有关联关系，可以通过 backSuper() 等方法返回
     */
    @Getter
    @JsonManagedReference
    private final List<Assign<E>> branches;
    /**
     * 子赋值程序，和主体是不相关的，对子体的mainData的引用修改不会影响主体，但子体中对 E 值的修改会影响主体
     * 比如将 E 转换成 其他类型并做一些操作等
     */
    private final List<Consumer<Collection<E>>> subs;

    @Nullable
    @JsonBackReference
    private Assign<E> superAssign;

    @Getter
    private String name;
    /**
     * 多线程执行器
     */
    @Getter
    private @Nullable Executor executor;
    @Getter
    private long timeout;
    /**
     * 资源计数器
     */
    private @Nullable Semaphore semaphore;
    /**
     * 执行状态
     */
    private InvokeStatusEnum status;
    /**
     * 中断执行的策略
     */
    @Getter
    private InterruptStrategyEnum interruptStrategy;
    /**
     * 获取 acquire 的执行计数
     */
    AtomicInteger acquireCounter;
    /**
     * invoke方法时间统计
     */
    @Getter
    private @Nullable Timing invokeTiming;

    /**
     * 依赖的Assigns
     */
    @JsonManagedReference
    private final List<Assign<E>> dependOnAssigns;
    @JsonBackReference
    private @Nullable Assign<E> dependByAssign;

    public Assign(Collection<E> mainData, int depth, @Nullable Assign<E> superAssign) {
        this.mainData = Collections.unmodifiableCollection(mainData);
        this.depth = depth;
        this.superAssign = superAssign;
        this.acquires = new ArrayList<>();
        this.assignValues = new ArrayList<>();
        this.name = "Assign_" + this.hashCode();
        this.interruptStrategy = InterruptStrategyEnum.ANY;
        this.status = InvokeStatusEnum.CREATED;
        this.executor = null;
        this.branches = new ArrayList<>();
        if (Objects.nonNull(this.superAssign)) {
            this.superAssign.branches.add(this);
        }
        this.subs = new ArrayList<>();
        this.acquireCounter = new AtomicInteger(0);
        this.dependOnAssigns = new ArrayList<>();
    }

    public Assign(Collection<E> mainData) {
        this(mainData, ROOT_DEPTH, null);
    }

    public Assign(Assign<E> superAssign) {
        this(superAssign.mainData, superAssign.depth + ROOT_DEPTH, superAssign);
    }

    public <K, T> Acquire<E, K, T> addAcquire(Function<Collection<K>, Map<K, T>> fetcher) {
        Acquire<E, K, T> acquire = new Acquire<>(this, fetcher, null);
        this.acquires.add(acquire);
        return acquire;
    }

    public <K, T> Acquire<E, K, T> addAcquireSingle(Function<K, @Nullable T> fetcher) {
        Acquire<E, K, T> acquire = new Acquire<>(this, null, fetcher);
        this.acquires.add(acquire);
        return acquire;
    }

    private static <K, T> Map<K, T> toMap(@Nullable Collection<T> ts,
                                          Function<T, K> keyGetter) {
        if (CollectionUtils.isEmpty(ts)) {
            return Map.of();
        }
        return Streams.toMap(ts, keyGetter);
    }

    public <K, T> Acquire<E, K, T> addAcquire(Function<Collection<K>, Collection<T>> fetcher,
                                              Function<T, @Nullable K> keyGetter) {
        Function<Collection<K>, Map<K, T>> mapFetcher = ks -> toMap(fetcher.apply(ks), keyGetter);
        Acquire<E, K, T> acquire = new Acquire<>(this, mapFetcher, null);
        this.acquires.add(acquire);
        return acquire;
    }

    public <K, T> Acquire<E, K, List<T>> addAcquireOutGroup(Function<Collection<K>, Collection<T>> fetcher,
                                                            Function<T, @Nullable K> keyGetter) {
        Function<Collection<K>, Map<K, List<T>>> mapFetcher = ks -> Streams.groupBy(fetcher.apply(ks), keyGetter);
        Acquire<E, K, List<T>> acquire = new Acquire<>(this, mapFetcher, null);
        this.acquires.add(acquire);
        return acquire;
    }

    public <K, T> Acquire<E, K, T> addAcquireInList(Function<List<K>, Collection<T>> fetcher,
                                                    Function<T, @Nullable K> keyGetter) {
        return addAcquire(ks -> fetcher.apply(new ArrayList<>(ks)), keyGetter);
    }

    public <K, T> Acquire<E, K, T> addAcquireInMainData(Function<Collection<E>, Collection<T>> fetcher,
                                                        Function<T, @Nullable K> keyGetter) {
        Function<Collection<K>, Map<K, T>> mapFetcher = ks -> toMap(fetcher.apply(this.mainData), keyGetter);
        return addAcquire(mapFetcher);
    }

    public <K, T> Acquire<E, K, T> addAcquireInExtra(Supplier<Collection<T>> fetcher,
                                                     Function<T, @Nullable K> keyGetter) {
        Function<Collection<K>, Map<K, T>> mapFetcher = ks -> toMap(fetcher.get(), keyGetter);
        return addAcquire(mapFetcher);
    }

    public <P> Assign<E> addAssignValue(BiConsumer<E, P> eSetter, P value) {
        this.assignValues.add(e -> eSetter.accept(e, value));
        return this;
    }

    public <P> Assign<E> addAssignValueIfAbsent(Function<E, @Nullable P> eGetter, BiConsumer<E, P> eSetter, P value) {
        this.assignValues.add(e -> {
            if (Objects.isNull(eGetter.apply(e))) {
                eSetter.accept(e, value);
            }
        });
        return this;
    }

    public Assign<E> parallel() {
        return parallel(null, null);
    }

    public Assign<E> parallelVirtual() {
        return parallel(null, SEMAPHORE_PERMITS_DEFAULT);
    }

    public Assign<E> parallel(Executor executor) {
        return parallel(executor, null);
    }

    public Assign<E> parallel(Integer semaphorePermitsMax) {
        return parallel(null, semaphorePermitsMax);
    }

    /**
     * 一般当 executor 为虚拟线程时，需指定“最大线程数”，防止创建大量虚拟线程，消耗关键资源，比如数据库连接等
     *
     * @param executor            线程池
     * @param semaphorePermitsMax 同时保持的最大线程数
     * @return Assign
     */
    public Assign<E> parallel(@Nullable Executor executor, @Nullable Integer semaphorePermitsMax) {
        log.debug("parallel executed with executor:{}, semaphorePermitsMax:{} ", executor, semaphorePermitsMax);
        this.executor = executor;
        if (Objects.nonNull(semaphorePermitsMax)) {
            this.semaphore = new Semaphore(semaphorePermitsMax);
        }
        if (Objects.nonNull(executor)) {
            return this;
        }
        // executor 为空，设置默认线程池
        if (Objects.nonNull(semaphorePermitsMax)) {
            this.executor = DEFAULT_EXECUTOR_VIRTUAL;
        } else {
            this.executor = DEFAULT_EXECUTOR;
        }
        if (this.timeout <= 0) {
            this.timeout = Constants.TIMEOUT_SECONDS_30;
        }
        return this;
    }

    public Assign<E> interruptStrategy(InterruptStrategyEnum interruptStrategy) {
        this.interruptStrategy = interruptStrategy;
        return this;
    }

    public Assign<E> name(String name) {
        this.name = name;
        return this;
    }

    public Assign<E> timeout(long timeout) {
        if (timeout <= 0) {
            log.warn("timeout must be positive, got: {}, ignored", timeout);
            return this;
        }
        this.timeout = timeout;
        return this;
    }

    public Assign<E> addBranch(Predicate<E> filter) {
        List<E> es = Streams.retain(this.mainData, filter).toList();
        return new Assign<>(es, this.depth + 1, this);
    }

    public Assign<E> addBranch() {
        return new Assign<>(this);
    }

    public <K> Assign<E> addBranches(Function<E, K> keyGetter, Map<K, Function<Collection<E>, Assign<E>>> keyAssigners) {
        Map<K, Consumer<Collection<E>>> keyOperates = HashMap.newHashMap(keyAssigners.size());
        keyAssigners.forEach((k, v) -> keyOperates.put(k, l -> {
            Assign<E> assign = v.apply(l);
            assign.superAssign = this;
            this.branches.add(assign);
        }));
        return addOperates(keyGetter, keyOperates);
    }

    public <K, F> Assign<E> addOperates(Function<E, K> keyGetter,
                                        Map<K, Consumer<Collection<F>>> keyOperates,
                                        Function<E, F> converter) {
        Map<K, Consumer<Collection<E>>> eOperates = HashMap.newHashMap(keyOperates.size());
        keyOperates.forEach((k, fConsumer) ->
                eOperates.put(k, es -> fConsumer.accept(Streams.map(es, converter).toList())));
        addOperates(keyGetter, eOperates);
        return this;
    }

    public <K> Assign<E> addOperates(Function<E, K> keyGetter, Map<K, Consumer<Collection<E>>> keyOperates) {
        Map<K, List<E>> keyMap = Streams.groupBy(
                this.mainData,
                e -> Objects.requireNonNull(keyGetter.apply(e), "keyGetter cannot return null")
        );
        Map<Consumer<Collection<E>>, List<E>> operatorDataMap = HashMap.newHashMap(keyMap.size());
        keyOperates.forEach((k, consumer) -> {
            List<E> es = keyMap.get(k);
            if (CollectionUtils.isEmpty(es)) {
                return;
            }
            operatorDataMap.compute(consumer, (a, l) -> {
                if (CollectionUtils.isEmpty(l)) {
                    l = new ArrayList<>();
                }
                l.addAll(es);
                return l;
            });
        });
        operatorDataMap.forEach(Consumer::accept);
        return this;
    }

    public Assign<E> addSub(Consumer<Collection<E>> sub) {
        this.subs.add(sub);
        return this;
    }

    /**
     * 依赖于指定的 Assign，必须等指定的 Assign 执行完毕才可执行
     *
     * @param assign 依赖的 Assign
     * @return this
     */
    public Assign<E> dependOn(Assign<E> assign) {
        this.dependOnAssigns.add(assign);
        assign.dependByAssign = this;
        return this;
    }

    /**
     * 被依赖
     *
     * @return Assign
     */
    public Assign<E> dependBy() {
        Assign<E> eAssign = new Assign<>(this.mainData);
        return eAssign.dependOn(this);
    }

    public Assign<E> backUpper() {
        Assign<E> assign = this.superAssign;
        if (Objects.isNull(assign)) {
            log.info("super assign is null, return self");
            return this;
        }
        return assign;
    }

    public Assign<E> backUpperTo(int depth) {
        if (depth < ROOT_DEPTH || depth >= this.depth) {
            log.info("dept={} super assign is null, return self", depth);
            return this;
        }
        Assign<E> assign = this.backUpper();
        while (assign.depth > depth) {
            assign = assign.backUpper();
        }
        return assign;
    }

    public Assign<E> backUppermost() {
        return backUpperTo(ROOT_DEPTH);
    }

    public Assign<E> backLower() {
        if (Objects.nonNull(this.dependByAssign)) {
            return this.dependByAssign;
        }
        return this;
    }

    public Assign<E> backLowest() {
        Assign<E> assign = this;
        while (Objects.nonNull(assign.dependByAssign)) {
            assign = assign.dependByAssign;
        }
        return assign;
    }

    public void forEach(Consumer<E> consumer) {
        this.mainData.forEach(consumer);
    }

    public Assign<E> peek(Consumer<E> consumer) {
        this.mainData.forEach(consumer);
        return this;
    }

    public List<E> toList() {
        return new ArrayList<>(this.mainData);
    }

    public <F> Assign<F> cast(Function<E, @Nullable F> mapping) {
        return new Assign<>(Streams.map(this.mainData, mapping).toList());
    }

    public <F> Assign<F> casts(Function<Collection<E>, Collection<F>> mapping) {
        return new Assign<>(mapping.apply(this.mainData));
    }

    public Assign<E> invoke() {
        this.invokeTiming = Timings.start();
        if (CollectionUtils.isEmpty(this.mainData)) {
            this.status = InvokeStatusEnum.ALL_SUCCESS;
            this.invokeTiming.end();
            return this;
        }
        log.debug("Assign name:{}", this.name);
        if (this.status.invoked()) {
            log.debug("Assign:{} invoked", this.name);
            return this;
        }
        // 依赖赋值先执行
        if (CollectionUtils.isNotEmpty(this.dependOnAssigns)) {
            this.dependOnAssigns.stream().filter(a -> !a.status.invoked()).forEach(Assign::invoke);
        }
        this.invokeMain();
        int sum = this.acquires.stream().map(k -> k.isSuccess() ? 0 : 1).reduce(0, Integer::sum);
        if (sum == 0) {
            this.status = InvokeStatusEnum.ALL_SUCCESS;
        } else if (sum == this.acquires.size()) {
            this.status = InvokeStatusEnum.ALL_FAIL;
        } else {
            this.status = InvokeStatusEnum.PARTIAL_FAIL;
        }
        log.debug("name:{} status:{}", this.name, this.status);
        this.invokeTiming.end();
        if (this.interruptStrategy.interrupt(this.status)) {
            log.debug("assign end, interruptStrategy:{}", this.interruptStrategy);
            return this;
        }
        this.invokeBranches();
        this.invokeSubs();
        this.invokeTiming.end();
        if (Objects.isNull(this.superAssign) && Objects.isNull(this.dependByAssign)) {
            log.info("assign invoke report:{}", Jsons.str(this));
        }
        return this;
    }

    private void invokeMain() {
        this.mainData.forEach(e -> this.assignValues.forEach(a -> a.accept(e)));
        Assign.<Acquire<E, ?, ?>, Map<?, ?>>parallelExecute(this.acquires, this.functionRunVirtualExecutor(a -> a.fetch(this.mainData)),
                this.executor, this.timeout, null, "Assign parallel fetch data exception");
        this.mainData.forEach(e -> this.acquires.forEach(a -> a.invoke(e)));
    }

    private void invokeBranches() {
        Assign.parallelExecute(this.branches, this.functionRunVirtualExecutor(Assign::invoke),
                this.executor, this.timeout, a -> InvokeStatusEnum.CREATED.equals(a.status), "Assign parallel execute branches exception");
    }

    private void invokeSubs() {
        Assign.<Consumer<Collection<E>>, Void>parallelExecute(this.subs, this.functionRunVirtualExecutor(a -> {
            a.accept(this.mainData);
            return null;
        }), this.executor, this.timeout, null, "Assign parallel execute invokeSubs exception");
    }

    static <T, R> void parallelExecute(Collection<T> ts,
                                       Function<T, R> function,
                                       @Nullable Executor executor,
                                       long timeout,
                                       @Nullable Predicate<T> filter,
                                       @Nullable String errorMsg) {
        Stream<T> tStream = Streams.of(ts);
        if (Objects.nonNull(filter)) {
            tStream = tStream.filter(filter);
        }
        if (Objects.nonNull(executor)) {
            try {
                List<CompletableFuture<R>> completableFutureList = tStream
                        .map(t -> CompletableFuture.supplyAsync(() -> function.apply(t), executor))
                        .toList();
                CompletableFuture.allOf(completableFutureList.toArray(new CompletableFuture[0]))
                        .get(ObjectUtils.defaultIfNull(timeout, Constants.TIMEOUT_SECONDS_30), TimeUnit.SECONDS);
            } catch (Exception e) {
                if (StringUtils.isNotBlank(errorMsg)) {
                    log.error(errorMsg, e);
                }
                BaseExceptionEnum.ASSIGN_PARALLEL_EXECUTE_EXCEPTION.throwException(e, errorMsg);
            }
        } else {
            tStream.forEach(function::apply);
        }
    }

    <T, R> Function<T, @Nullable R> functionRunVirtualExecutor(Function<T, @Nullable R> function) {
        // 由于虚拟线程可大批量创建，这里使用信号量（Semaphore）控制最大线程并发数，避免数据库连接等资源过渡消耗
        if (Objects.nonNull(this.semaphore)) {
            return t -> {
                try {
                    this.semaphore.acquire();
                    return function.apply(t);
                } catch (InterruptedException e) {
                    Thread.currentThread().interrupt();
                    throw BaseExceptionEnum.THREAD_INTERRUPTED.newException(e);
                } finally {
                    this.semaphore.release();
                }
            };
        } else {
            return function;
        }
    }

    public static <E> Assign<E> build(Collection<E> mainData) {
        return new Assign<>(mainData);
    }
}