@startuml Assign_Utility_Hierarchy

!define SCALE 0.85
skinparam backgroundColor #FAFAFA
skinparam classBackgroundColor #FFFFFF
skinparam classArrowColor #0277BD
skinparam classBorderColor #01579B
skinparam scale SCALE
skinparam defaultFontSize 10

' ======================== 第1层：核心容器类 (左) ========================

package "Layer 1: Container" #C8E6C9 {
    class Assign<E> {
        - mainData: Collection<E>
        - acquires: List<Acquire>
        - branches: List<Assign>
        - subs: List<Consumer>
        - dependOnAssigns: List<Assign>
        - dependByAssign: Assign
        --
        + addAcquire(): Acquire
        + addBranch(f): Assign
        + addSub(c): Assign
        + dependOn(assign): Assign
        + dependBy(): Assign
        + parallel(): Assign
        + invoke(): Assign
    }
}

' ======================== 第2层：数据获取层 (左中) ========================

package "Layer 2: Acquisition" #FFE0B2 {
    class Acquire<E,K,T> {
        - actions: List<Action>
        - batchFetcher: Function
        - fetcher: Function
        - ktMap: Map<K,T>
        --
        + cache(): Acquire
        + batchSize(n): Acquire
        + addAction(kg): Action
        + fetch(data): Map
    }
}

' ======================== 第3层：行动映射层 (右中) ========================

package "Layer 3: Mapping" #E1F5FE {
    class Action<E,K,T> {
        - keyGetter: Function
        - assembles: List<Assemble>
        - filter: Predicate<T>
        --
        + addAssemble(...): Action
        + filter(p): Action
        + invoke(e, map): void
    }
}

' ======================== 第4层：赋值执行 (右) ========================

package "Layer 4: Execution" #D4F1F4 {
    class Assemble<E,T> {
        - getAndSet: BiConsumer
        --
        + invoke(e, t): void
    }
}

' ======================== 配置枚举 (底) ========================

package "Config" #FFF9C4 {
    enum InvokeStatusEnum {
        CREATED
        ALL_SUCCESS
        PARTIAL_FAIL
        ALL_FAIL
    }

    enum InterruptStrategyEnum {
        NO, ANY, ALL
    }
}


' ======================== 依赖关系 ========================

Assign --> Acquire : contains
Assign --> Assign : branches (向下管理)
Assign --> Assign : dependOn (向上依赖)
Assign --> InvokeStatusEnum : uses
Acquire --> Action : contains
Action --> Assemble : contains

' ======================== 说明注解 ========================
note right of Acquire
  <b>Layer 2: 数据获取</b>
  fetch() 流程：
  • 提取 keys
  • Caffeine 缓存
  • 批量查询
  • 自动降级
end note

note right of Action
  <b>Layer 3: 数据映射</b>
  invoke() 流程：
  • 提取元素 key
  • 查找关联数据
  • 应用过滤器
  • 执行赋值链
end note

note right of Assemble
  <b>Layer 4: 赋值执行</b>
  invoke() 流程：
  • 执行 BiConsumer
  • 最小化单元
  • 单一职责
end note

' ======================== 底部关键特性 ========================

note right of Assign
  <b>核心创新点:</b>
  1、三级并行执行 (Acquire/Assign/Branch)
  2、智能数据降级 (缓存→批量→单条)
  3、灵活策略控制 (中断、超时、异常)
  4、清晰分层设计 (容器→获取→映射→执行)
  5、双向任务编排 (向下管理 + 向上依赖)

  <b>双向编排模型:</b>
  ┌─────────────────────────────┐
  │    向下管理 (父→子)          │
  │    branch: 条件分支           │
  │    sub: 独立子任务            │
  │    父持有子引用，自动触发      │
  ├─────────────────────────────┤
  │    向上依赖 (子→父/同级)      │
  │    dependOn: 声明依赖         │
  │    dependBy: 被依赖快捷方法   │
  │    invoke时自动先执行依赖      │
  └─────────────────────────────┘

  <b>性能指标:</b>
  代码简化: 70% | 性能提升: 2-10倍 | 代码行数: 20+行 → 5行
end note

@enduml
